--- a/_config.yml
+++ b/_config.yml
@@ -38,41 +38,37 @@ mastodon_link                             :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
-    fontawesome_icon_name                 : magic
-    
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Classic Mode
+    description                           : Count from 1 to the highest number without distractions.
+    fontawesome_icon_name                 : list-ol
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
+  - title                                 : Reverse Mode
+    description                           : Start from the highest number and race down to 1.
+    fontawesome_icon_name                 : arrow-rotate-left
 
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
+  - title                                 : Time Attack
+    description                           : Beat the clock with an integrated timer.
+    fontawesome_icon_name                 : stopwatch
 
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
+  - title                                 : Random Mode
+    description                           : Tap before the numbers move to a new position.
+    fontawesome_icon_name                 : random
 
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
+  - title                                 : Memory Mode
+    description                           : Memorize positions and hit numbers in the correct order.
+    fontawesome_icon_name                 : puzzle-piece
 
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
+  - title                                 : Global Leaderboards
+    description                           : Compete worldwide with Game Center rankings for every mode and difficulty.
+    fontawesome_icon_name                 : trophy
 
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
+  - title                                 : Player Stats
+    description                           : Track your games played, best times, and personal records.
+    fontawesome_icon_name                 : chart-line
+
+  - title                                 : Smooth Animations
+    description                           : Enjoy fluid transitions and haptic feedback for every tap.
+    fontawesome_icon_name                 : wand-magic-sparkles
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
