--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,9 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#0A0F1C"
 topbar_transparency                       : 0.1
-topbar_title_color                        : "#ffffff"
+topbar_title_color                        : "#FFFFFF"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#363b3d"
@@ -87,24 +87,24 @@ cover_overlay_transparency                : 0.8
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#ffffff"
+body_background_color                     : "#0A0F1C"
 
-link_color                                : "#1d63ea"
+link_color                                : "#2B6CB0"
 
-app_title_color                           : "#ffffff"
-app_price_color                           : "#ffffff"
-app_description_color                     : "#ffffff"
+app_title_color                           : "#FFFFFF"
+app_price_color                           : "#D4AF37"
+app_description_color                     : "#E2E8F0"
 
-feature_title_color                       : "#000000"
-feature_text_color                        : "#666666"
+feature_title_color                       : "#FFFFFF"
+feature_text_color                        : "#CBD5E0"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#D4AF37"
+feature_icons_background_color            : "#1A202C"
 
-social_icons_foreground_color             : "#666666"
-social_icons_background_color             : "#e6e6e6"
+social_icons_foreground_color             : "#E2E8F0"
+social_icons_background_color             : "#1A202C"
 
-footer_text_color                         : "#666666"
+footer_text_color                         : "#A0AEC0"
 
 
 
